SERVER-30087 convertToCapped should not yield locks before renaming